--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "grunt": "~0.4.1",
     "grunt-closurecompiler": "~0.9.5",
     "extend": "~1.1.3",
-    "grunt-exec": "~0.4.2"
+    "grunt-exec": "~0.4.2",
+    "grunt-contrib-connect": "~0.5.0",
+    "mocha-browserstack": "~0.2.1",
+    "browserstack-test": "~0.2.10",
+    "localtunnel": "~0.1.3"
   }
 }
