--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "test"
   },
   "repository": "git@github.com:bramstein/trmix.git",
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Bram Stein <b.l.stein@gmail.com> (http://www.bramstein.com)",
   "license": "BSD",
   "devDependencies": {
@@ -21,6 +20,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "mocha-browserstack": "~0.2.1",
     "browserstack-test": "~0.2.10",
-    "localtunnel": "~0.1.3"
+    "localtunnel": "~0.1.3",
+    "assetgraph-builder": "~1.8.2"
   }
 }
