--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha-browserstack": "~0.2.1",
     "browserstack-test": "~0.2.10",
     "localtunnel": "~0.1.3",
-    "assetgraph-builder": "~1.8.2"
+    "assetgraph-builder": "~1.8.2",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
