--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "author": "Bram Stein <b.l.stein@gmail.com> (http://www.bramstein.com)",
   "license": "BSD",
   "devDependencies": {
-    "expect.js": "~0.2.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "mocha": "~1.12.0",
+    "assetgraph-builder": "~1.8.2",
+    "browserstack-test": "~0.2.10",
+    "expect.js": "^0.3.1",
+    "extend": "^1.2.1",
     "grunt": "~0.4.1",
     "grunt-closurecompiler": "~0.9.5",
-    "extend": "~1.1.3",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-exec": "~0.4.2",
-    "grunt-contrib-connect": "~0.5.0",
-    "mocha-browserstack": "~0.2.1",
-    "browserstack-test": "~0.2.10",
-    "localtunnel": "~0.1.3",
-    "assetgraph-builder": "~1.8.2",
-    "grunt-contrib-copy": "~0.4.1"
+    "localtunnel": "^1.3.0",
+    "mocha": "^1.19.0",
+    "mocha-browserstack": "~0.2.1"
   }
 }
